--- a/templates/taxi/car_detail.html
+++ b/templates/taxi/car_detail.html
@@ -12,6 +12,19 @@
     </a>
   </h1>
   <p>Manufacturer: ({{ car.manufacturer.name }}, {{ car.manufacturer.country }})</p>
+  
+  {% if request.user in car.drivers.all %}
+    <form action="{% url 'taxi:car-assign-delete' pk=car.id %}" method="post">
+      {% csrf_token %}
+      <input type="submit" class="btn btn-danger link-to-page" value="Delete me from this car">
+    </form>
+  {% else %}
+    <form action="{% url 'taxi:car-assign-delete' pk=car.id %}" method="post">
+      {% csrf_token %}
+      <input type="submit" class="btn btn-success link-to-page" value="Assign me to this car">
+    </form>
+  {% endif %}
+  
   <h1>Drivers</h1>
   <hr>
   <ul>
