--- a/templates/taxi/driver_detail.html
+++ b/templates/taxi/driver_detail.html
@@ -23,4 +23,10 @@
       <p>No cars!</p>
     {% endfor %}
   </div>
+  <a href="{% url 'taxi:driver-update' pk=driver.id %}" class="btn btn-secondary">
+    Update
+  </a>
+  <a href="{% url 'taxi:driver-delete' pk=driver.id %}" class="btn btn-danger">
+    Delete
+  </a>
 {% endblock %}
